Fix typo in solution.

--- a/basic_python/basics.tex
+++ b/basic_python/basics.tex
@@ -511,8 +511,8 @@ In []: a*10 + b == x
   \frametitle{Another Solution}
 \begin{lstlisting}
 In []: sx = str(x)
-In []: a = int(sx[0]])
-In []: b = int(sx[1]])
+In []: a = int(sx[0])
+In []: b = int(sx[1])
 In []: a*10 + b == x
 \end{lstlisting}
 \end{frame}
