Fix some errors in the slides.

--- a/basic_python/control_flow.tex
+++ b/basic_python/control_flow.tex
@@ -174,7 +174,7 @@ In []: while b < 30:
   \begin{lstlisting}
 In []: a, b = 0, 1
 In []: while b < 30:
-  ...:     print(b, end='')
+  ...:     print(b, end=' ')
   ...:     a, b = b, a + b
   ...:
   ...:
@@ -394,7 +394,7 @@ while x < 1000:
     \item Conditionals: \kwrd{if elif else}
     \item Looping: \kwrd{while} \& \kwrd{for}
     \item \typ{range}
-    \item \kwrd{break, continue, while}
+    \item \kwrd{break, continue, pass}
     \item Solving simple problems
   \end{itemize}
 \end{frame}
