--- a/basic_python/practice_basics.tex
+++ b/basic_python/practice_basics.tex
@@ -56,7 +56,7 @@ from __future__ import print_function
 \frametitle{Possible solution}
 \begin{lstlisting}
   name = input() # Or raw_input()
-  print("Hello", name)
+  print("hello", name)
 \end{lstlisting}
 
 \end{frame}
@@ -75,7 +75,7 @@ from __future__ import print_function
 \frametitle{Possible solution}
 \begin{lstlisting}
 name = input("Please enter your name: ")
-print("Hello", name)
+print("hello", name)
 \end{lstlisting}
 
 \end{frame}
@@ -191,7 +191,7 @@ print("Hello", name)
 \frametitle{Possible solution}
 \begin{lstlisting}
   name = input()
-  print("Hello", name.upper())
+  print(name.upper())
 \end{lstlisting}
 \end{frame}
 
