--- a/basic_python/practice_files_exc.tex
+++ b/basic_python/practice_files_exc.tex
@@ -176,7 +176,7 @@ def largest(f):
 \begin{frame}[plain, fragile]
   \frametitle{Exercise: raising exceptions}
   \begin{enumerate}
-  \item Write a function \typ{func} which takes a single integer argument
+  \item Write a function \typ{func} which takes a single integer argument \typ{x}
   \item If \typ{x} is not a positive integer raise a \typ{ValueError}
   \item If \typ{x} is not an integer type raise a \typ{TypeError}
   \end{enumerate}
@@ -194,6 +194,17 @@ def largest(f):
 
 \end{lstlisting}
 \end{frame}
+
+\begin{frame}
+  \frametitle{What next?}
+  \begin{itemize}
+  \item Only covered the very basics
+  \item More advanced topics remain
+  \item Read the official Python tutorial:
+    \url{docs.python.org/tutorial/}
+  \end{itemize}
+\end{frame}
+
 
 \begin{frame}
   \centering
