Fix links to documentation: fixes #1.

--- a/scipy/basic/basic_scipy.tex
+++ b/scipy/basic/basic_scipy.tex
@@ -499,9 +499,9 @@ Only scratched the surface here \dots
 \begin{frame}
     \frametitle{Further reading}
     \begin{itemize}
-        \item \url{ipython.github.com/ipython-doc}
-        \item \url{matplotlib.sf.net/contents.html}
-        \item \url{scipy.org/Tentative_NumPy_Tutorial}
+        \item \url{ipython.readthedocs.io}
+        \item \url{matplotlib.org/contents.html}
+        \item \url{docs.scipy.org/doc/numpy/user/quickstart.html}
         \item \url{docs.scipy.org/doc/scipy/reference/tutorial}
     \end{itemize}
 \end{frame}
