Small changes and use 16:9 aspectratio.

--- a/advanced_python/intro.tex
+++ b/advanced_python/intro.tex
@@ -1,4 +1,4 @@
-\documentclass[14pt,compress]{beamer}
+\documentclass[14pt,compress,aspectratio=169]{beamer}
 
 \input{macros.tex}
 
@@ -36,6 +36,7 @@
     \begin{itemize}
     \item Canopy
     \item Spyder
+    \item Emacs/Vim
     \item VS Code \url{code.visualstudio.com}
     \end{itemize}
   \item Any Python environment works
