--- a/advanced_python/names_objects.tex
+++ b/advanced_python/names_objects.tex
@@ -1,4 +1,5 @@
-\documentclass[14pt,compress]{beamer}
+\documentclass[14pt,compress,aspectratio=169]{beamer}
+
 
 \input{macros.tex}
 
@@ -258,6 +259,7 @@ In []: a = 'hello'
 
 \begin{frame}[fragile]
   \frametitle{Exercise 1}
+  \vspace*{-0.1in}
 \begin{lstlisting}
 a = [1, 2]
 b = a
