--- a/advanced_python/only_kwargs.tex
+++ b/advanced_python/only_kwargs.tex
@@ -1,4 +1,4 @@
-\documentclass[14pt,compress]{beamer}
+\documentclass[14pt,compress,aspectratio=169]{beamer}
 
 \input{macros.tex}
 
@@ -16,8 +16,9 @@
   \titlepage
 \end{frame}
 
-\begin{frame}[fragile]
+\begin{frame}[fragile, plain]
   \frametitle{Motivation}
+  \vspace*{-0.1in}
   \begin{itemize}
   \item One can mix positional and keyword arguments
   \end{itemize}
