--- a/advanced_python/varargs_kwargs.tex
+++ b/advanced_python/varargs_kwargs.tex
@@ -1,4 +1,4 @@
-\documentclass[14pt,compress]{beamer}
+\documentclass[14pt,compress,aspectratio=169]{beamer}
 
 \input{macros.tex}
 
@@ -28,6 +28,7 @@
 
 \begin{frame}[fragile]
   \frametitle{Advanced unpacking}
+  \vspace*{-0.1in}
 \begin{lstlisting}
 In []: a, b = 1, 2  # We know this!
 \end{lstlisting}
@@ -64,6 +65,7 @@ In []: f.close()
 
 \begin{frame}[fragile]
   \frametitle{Arbitrary positional arguments}
+  \vspace*{-0.1in}
   \begin{itemize}
   \item Arbitrary positional arguments: \lstinline{*arg}
   \end{itemize}
@@ -101,6 +103,7 @@ Also is perfectly valid
 
 \begin{frame}[fragile]
   \frametitle{Arbitrary keyword arguments}
+  \vspace*{-0.1in}
   \begin{itemize}
   \item Keyword arguments using \lstinline{**kw}
   \end{itemize}
