Add some basic material on OOP.

--- a/advanced_python/macros.tex
+++ b/advanced_python/macros.tex
@@ -2,7 +2,7 @@
 % Modified from: generic-ornate-15min-45min.de.tex
 \mode<presentation>
 {
-  \usetheme{Warsaw}
+  \usetheme{Madrid}
   \useoutertheme{infolines}
   \setbeamercovered{invisible}
 }
