Some minor changes.

--- a/advanced_python/oop_inheritance.tex
+++ b/advanced_python/oop_inheritance.tex
@@ -160,10 +160,12 @@ tut.needs_computer
   \frametitle{Some points}
   \begin{itemize}
   \item \lstinline{Tutorial} is a subclass (or child) of \lstinline{Talk}
+  \item \lstinline{Tutorial} is derived from (inherits from) \lstinline{Talk}
   \item \lstinline{Talk} is the base class (or parent class)
   \item Only the \lstinline{__init__} has been changed
   \item This is called overriding
   \item \lstinline{super} ensures that the parent class is called
+  \item Calling the parent is not automatic
   \end{itemize}
 \end{frame}
 
