--- a/advanced_python/practice_functions.tex
+++ b/advanced_python/practice_functions.tex
@@ -128,13 +128,13 @@ def nkw(**kw):
   \end{block}
 
 \begin{lstlisting}
-In []: nkw(x=1, y=2)
+In []: kwname(x=1, y=2)
 Out[]: ['x', 'y']
 
-In []: nkw()
+In []: kwname()
 Out[]: []
 
-In []: nkw(z=1, a=2)
+In []: kwname(z=1, a=2)
 Out[]: ['a', 'z']
 \end{lstlisting}
 \end{frame}
@@ -143,7 +143,7 @@ Out[]: ['a', 'z']
 \begin{frame}[plain, fragile]
   \frametitle{Solution}
 \begin{lstlisting}
-def nkw(**kw):
+def kwname(**kw):
     return sorted(kw.keys())
 \end{lstlisting}
 \end{frame}
